force-app/main/default/objects/Bypass_Settings__c/Bypass_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
	>Use this custom setting to bypass the main automations (Apex, Flows, and Validation rules). This is a bypass for all execution.</description>
    <label>Bypass Settings</label>
</CustomObject>