force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this to bypass flows.</description>
    <inlineHelpText>Use this to bypass flows.</inlineHelpText>
    <label>Bypass Flows</label>
    <type>Checkbox</type>
</CustomField>