force-app/main/default/objects/Bypass_Settings__c/fields/Bypass_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this to bypass validation rules.</description>
    <inlineHelpText>Use this to bypass validation rules.</inlineHelpText>
    <label>Bypass Validations</label>
    <type>Checkbox</type>
</CustomField>