force-app/main/default/objects/Bypass_Settings__c/fields/Specific_Automation_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Specific_Automation_Bypass__c</fullName>
    <description>It allows storing the name of the automation to be bypassed using a comma.</description>
    <inlineHelpText>It allows storing the name of the automation to be bypassed using a comma.</inlineHelpText>
    <label>Specific Automation Bypass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>